--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,11 +1,6 @@
-@import "normalize";
-body {
-    background-color: red;
-    .box {
-        background-color: #000;
-        width: 300px;
-        height: 300px;
-        display: flex;
-        justify-content: space-between;
-    }
-}
+@import "../../node_modules/reset-css/reset";
+@import "settings";
+@import "grid";
+@import "fonts";
+@import "variables";
+@import "header";
