--- a/src/scss/_interface.scss
+++ b/src/scss/_interface.scss
@@ -51,5 +51,17 @@
     &_primary {
         background-color: $primary;
         box-shadow: 0px 5px 15px rgba($primary, 0.2);
+        border: 1px solid $primary;
+    }
+    &_transparent {
+        border: 1px solid $white;
+        background-color: transparent;
+        color: $white;
+        transition: all 0.3s;
+        &:hover {
+            background-color: $primary;
+            box-shadow: 0px 5px 15px rgba($primary, 0.2);
+            border-color: $primary;
+        }
     }
 }
