--- a/src/scss/templates/_hero.scss
+++ b/src/scss/templates/_hero.scss
@@ -1,30 +1,28 @@
 .hero {
-    &__wrapper {
-        background: $dark url(../../img/hero.jpg) no-repeat right/cover;
-        position: relative;
-        margin-right: -100px;
-        &::before {
-            content: "";
-            width: 100%;
-            height: 100%;
-            background-color: rgba($dark, 70%);
-            position: absolute;
-            z-index: 1;
-            left: 0;
-            top: 0;
-        }
+    background: $dark url(../../img/hero.jpg) no-repeat center/cover;
+    position: relative;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    &::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: rgba($dark, 70%);
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        top: 0;
     }
     &__content {
+        max-width: 500px;
+        z-index: 2;
         position: relative;
-        z-index: 1;
-        padding: 194px 0 208px 60px;
     }
     &__title {
         margin-bottom: 19px;
-        max-width: 450px;
     }
     &__text {
-        max-width: 504px;
         font-family: "FuturaBook";
         font-size: 22px;
         color: $white;
@@ -38,18 +36,21 @@
     }
     &__instagram {
         position: absolute;
+        z-index: 2;
         top: 0;
-        left: -87px;
+        left: 0;
     }
     &__scroll-down {
         position: absolute;
+        z-index: 2;
         left: 0;
         bottom: 0;
         transform: translate(-87px, 50%);
     }
 }
 .instagram {
-    width: 87px;
+    max-width: 80px;
+    height: 100%;
     background-color: $dark;
     height: 100%;
     display: flex;
@@ -85,12 +86,12 @@
     color: $white;
     font-family: "YesevaOne", serif;
     text-transform: uppercase;
-    padding: 34px 90px;
     background-color: $dark;
     text-decoration: none;
     transition: color 0.3s;
     display: flex;
     align-items: center;
+    padding: 34px 90px;
     &::after {
         content: url(../../img/button-down.svg);
         margin-left: 12px;
