--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,5 +4,6 @@
 @import "grid";
 @import "variables";
 @import "interface";
+@import "./templates/section";
 @import "./templates/header";
 @import "./templates/hero";
