--- a/src/scss/templates/_header.scss
+++ b/src/scss/templates/_header.scss
@@ -1,9 +1,14 @@
 .header {
     background-color: $dark;
-    padding: 24px 0;
+    padding: 1.714rem 0;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
+}
+@media screen and (max-width: 570px) {
+    .header {
+        padding: 1.642rem 0;
+    }
 }
