--- a/src/scss/templates/_section.scss
+++ b/src/scss/templates/_section.scss
@@ -2,10 +2,10 @@
     &-title {
         &__heading {
             text-transform: uppercase;
-            font-size: 20px;
+            font-size: 1.428rem;
             font-family: "YesevaOne";
             text-align: center;
-            margin-bottom: 10px;
+            margin-bottom: 0.714rem;
         }
         &__image {
             display: flex;
