--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -3,3 +3,17 @@
     width: 85%;
     margin: 0 auto;
 }
+.row {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.col {
+    flex-basis: 32%;
+}
+@media screen and (max-width:760px) {
+    .row {
+        flex-direction: column;
+        align-items: center;
+    }
+}
