feat: add section design

--- a/src/scss/templates/_section.scss
+++ b/src/scss/templates/_section.scss
@@ -22,4 +22,11 @@
             }
         }
     }
+    &__description {
+        font-family: "FuturaBook";
+        font-size: 1.428rem;
+        color: $gray;
+        text-align: center;
+        line-height: 1.358;
+    }
 }
