--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -8,6 +8,9 @@ html {
 img {
     max-width: 100%;
 }
+sup {
+    vertical-align: super;
+}
 @media screen and (max-width: 1200px) {
     html {
         font-size: 12px;
