--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,4 +8,5 @@
 @import "./templates/header";
 @import "./templates/hero";
 @import "./templates/types";
+@import "./templates/design";
 @import "./templates/footer";
