--- a/src/scss/templates/_types.scss
+++ b/src/scss/templates/_types.scss
@@ -34,7 +34,7 @@
         list-style-type: disc;
         line-height: 1.698;
     }
-    &__price {
+    &__price-tag {
         width: 16.285rem;
         background-color: $primary;
         font-family: "YesevaOne";
