--- a/src/scss/templates/_design.scss
+++ b/src/scss/templates/_design.scss
@@ -7,6 +7,18 @@
         max-width: 52.928rem;
         margin-bottom: 2.785rem;
     }
+    &__image {
+        position: relative;
+        &::before {
+            content: "";
+            background-color: rgba($black, 0.3);
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+    }
 }
 @media screen and (max-width: 760px) {
     .design-project {
@@ -16,6 +28,11 @@
         }
         &__card {
             margin-bottom: 5.714rem;
+        }
+        &__image {
+            &::before {
+                display: none;
+            }
         }
     }
 }
