--- a/src/scss/_interface.scss
+++ b/src/scss/_interface.scss
@@ -76,12 +76,70 @@
     &_transparent {
         border: 1px solid $white;
         background-color: transparent;
-        color: $white;
         transition: all 0.3s;
         &:hover {
             background-color: $primary;
             box-shadow: 0px 5px 15px rgba($primary, 0.2);
             border-color: $primary;
+        }
+    }
+}
+.input-group {
+    &__label {
+        font-family: "FuturaBook";
+        color: rgba($white, 0.5);
+        font-size: 1.071rem;
+    }
+    &__input {
+        width: 100%;
+        font-family: "FuturaMedium";
+        font-size: 1.285rem;
+        color: $white;
+        background-color: transparent;
+        border: none;
+        border-bottom: 1px solid rgba($white, 0.15);
+        padding: 0.642rem 0;
+        transition: background-color 0.3s;
+        &::placeholder {
+            color: $white;
+        }
+        &:focus {
+            background-color: rgba($white, 0.1);
+        }
+    }
+}
+.checkbox-group {
+    &__input {
+        position: absolute;
+        left: -9999px;
+        &:checked + label::before {
+            content: url("../img/checkbox.svg");
+            background-color: $primary;
+            border: 1px solid $primary;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    &__label {
+        font-family: 'FuturaBook';
+        font-size: 1.142rem;
+        color: $white;
+        position: relative;
+        display: inline-block;
+        padding-left: 24px;
+        vertical-align: middle;
+        &::before {
+            content: "";
+            width: 1.142rem;
+            height: 1.142rem;
+            border-radius: 1px;
+            border: 1px solid $white;
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            transition: background-color 0.3s;
         }
     }
 }
