--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $dark: #131313;
 $dark-gray: #252525;
 $gray: #363636;
 $light-gray: #959595;
+$light-black: #181818;
 $black: #000;
 $white: #fff;
 $primary: #E3B873;
