--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -11,6 +11,9 @@ img {
 sup {
     vertical-align: super;
 }
+.scroll-hide {
+    overflow: hidden;
+}
 @media screen and (max-width: 1200px) {
     html {
         font-size: 12px;
