--- a/src/scss/templates/_modal.scss
+++ b/src/scss/templates/_modal.scss
@@ -1,19 +1,26 @@
 .modal {
+    opacity: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba($black, 0.3);
+    color: $white;
+    font-family: "FuturaBook";
+    display: none;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     z-index: 3;
     left: 0;
     top: 0;
-    background-color: rgba($black, 0.3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: none;
+    transition: opacity 0.3s;
+    &_visible {
+        opacity: 1;
+        display: flex;
+    }
     &__dialog {
-        background: url("../../img/bg-lines.svg") $light-black;
-        padding: 2.357rem 3.5rem 1.928rem;
+        background: url("../../img/bg-lines.svg") $light-black no-repeat center;
         position: relative;
+        padding: 2.357rem 3.5rem 1.928rem;
     }
     &__close {
         width: 23px;
@@ -48,17 +55,21 @@
         max-width: 25.857rem;
         margin-bottom: 2.428rem;
     }
-    &__input-group {
-        margin-bottom: 3.428rem;
+    &__form {
+        display: flex;
+        flex-direction: column;
     }
-    &__checkbox-group {
-        margin-top: 1.142rem;
-        margin-bottom: 2.781rem;
+    &__input {
+        margin-bottom: 3.428rem;
+        &:last-of-type {
+            margin-bottom: 1.142rem;
+        }
+    }
+    &__policy {
+        margin-bottom:2.781rem;
     }
     &__button {
-        display: block;
+        align-self: flex-end;
         padding: 1.357rem 1.571rem;
-        margin-left: auto;
-        margin-right: 0;
     }
 }
