--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -5,15 +5,22 @@
 }
 .row {
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-between;
 }
-.col {
+.col-30 {
     flex-basis: 32%;
+}
+.col-50 {
+    width: 50%;
 }
 @media screen and (max-width:760px) {
     .row {
         flex-direction: column;
         align-items: center;
+    }
+    .col-50 {
+        width: 100%;
     }
 }
