feat: add styles working-methods section

--- a/src/scss/templates/_modal.scss
+++ b/src/scss/templates/_modal.scss
@@ -18,7 +18,7 @@
         display: flex;
     }
     &__dialog {
-        background: url("../../img/bg-lines.svg") $light-black no-repeat center;
+        background: url("../../img/bg-lines-sm.svg") $light-black no-repeat center;
         position: relative;
         padding: 2.357rem 3.5rem 1.928rem;
     }
