--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,5 +12,6 @@
 @import "./templates/projects";
 @import "./templates/types";
 @import "./templates/design";
+@import "./templates/working-methods";
 @import "./templates/footer";
 @import "./templates/modal";
