--- a/src/scss/templates/_hero.scss
+++ b/src/scss/templates/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: $dark url(../../img/hero.jpg) no-repeat center/cover;
+    background: $dark url(../../img/hero.webp) no-repeat center/cover;
     position: relative;
     height: 100vh;
     display: flex;
