--- a/src/scss/templates/_section.scss
+++ b/src/scss/templates/_section.scss
@@ -10,6 +10,9 @@
             &_primary {
                 color: $primary;
             }
+            &_white {
+                color: $white;
+            }
         }
         &__word {
             display: flex;
