--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "./templates/slider";
 @import "./templates/header";
 @import "./templates/hero";
+@import "./templates/control";
 @import "./templates/projects";
 @import "./templates/types";
 @import "./templates/design";
