--- a/src/scss/templates/_design.scss
+++ b/src/scss/templates/_design.scss
@@ -1,7 +1,7 @@
 .design-project {
     margin-bottom: -30rem;
     padding-top: 11rem;
-    &__title {
+    &__section-title {
         margin-bottom: 2.214rem;
     }
     &__description {
