--- a/src/scss/templates/_control.scss
+++ b/src/scss/templates/_control.scss
@@ -2,7 +2,7 @@
     position: relative;
     padding-bottom: 10.142rem;
     margin-top: -23.142rem;
-    &__title {
+    &__section-title {
         margin-bottom: 2.214rem;
     }
     &__video {
@@ -46,10 +46,10 @@
     }
 }
 .video {
-    width: 58.357rem;
-    max-width: 100%;
-    height: 31rem;
-    background: url("../../img/control.jpg") no-repeat center;
+    max-width: 58.357rem;
+    min-height: 31rem;
+    background: $dark url("../../img/control.jpg") no-repeat center;
+    box-shadow: (0px 20px 50px rgba($black, 0.15));
     position: relative;
     display: flex;
     align-items: center;
@@ -63,7 +63,7 @@
         left: 0;
         top: 0;
     }
-    &__button {
+    &__play {
         width: 6.071rem;
         height: 6.071rem;
         border-radius: 50%;
