feat: add animations

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/reset-css/reset";
 @import "../../node_modules/swiper/swiper-bundle";
+@import "../../node_modules/animate.css/animate";
 @import "fonts";
 @import "settings";
 @import "grid";
