feat: add futer form

--- a/src/scss/_interface.scss
+++ b/src/scss/_interface.scss
@@ -149,6 +149,9 @@
             transform: translateY(-50%);
             transition: background-color 0.3s;
         }
+        &_light {
+            color: $white;
+        }
     }
 }
 .scroll-top {
