--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,5 +15,6 @@
 @import "./templates/types";
 @import "./templates/design";
 @import "./templates/working-methods";
+@import "./templates/clients";
 @import "./templates/footer";
 @import "./templates/modal";
