--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -20,7 +20,7 @@
         align-items: center;
         justify-content: space-between;
         &-wrap {
-            margin: 0 auto 3.714rem;
+            margin: -15rem auto 3.714rem;
         }
     }
     &__title {
