feat: add command section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import "./templates/types";
 @import "./templates/design";
 @import "./templates/working-methods";
+@import "./templates/command";
 @import "./templates/clients";
 @import "./templates/footer";
 @import "./templates/modal";
