feat: add adaptive for footer

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -3,6 +3,10 @@
     width: 85%;
     margin: auto;
 }
+.column {
+    display: flex;
+    flex-direction: column;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
