--- a/src/scss/templates/_command.scss
+++ b/src/scss/templates/_command.scss
@@ -80,6 +80,7 @@
 @media screen and (max-width: 760px) {
     .command {
         background-color: $light-black;
+        padding-top: 3.68rem;
         &__description {
             font-size: 1.071rem;
         }
