--- a/src/scss/_interface.scss
+++ b/src/scss/_interface.scss
@@ -200,6 +200,18 @@ label.invalid {
         }
     }
 }
+@media screen and (max-width: 760px) {
+    .policy {
+        &__label {
+            font-size: 1.333rem;
+        }
+    }
+    .button {
+        &_primary {
+            box-shadow: 0px 10px 20px 0px rgba($primary, 0.1);
+        }
+    }
+}
 @media screen and (max-width: 570px) {
     .button {
         width: 100%;
