--- a/src/scss/templates/_clients.scss
+++ b/src/scss/templates/_clients.scss
@@ -1,7 +1,81 @@
 .clients {
     padding-bottom: 26rem;
+    &__description {
+        max-width: 25.714rem;
+        margin: 1.735rem auto 2.776rem;
+    }
+    &__card {
+        background-color: $white;
+        box-shadow: 0px 10px 50px 0px rgba($black, 0.16);
+        padding: 1.714rem 1.428rem 4.9rem;
+        position: relative;
+    }
+    &__avatar {
+        width: 5.428rem;
+        height: 5.428rem;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-right: 1.5rem;
+    }
+    &__name {
+        line-height: 1.27;
+        max-width: 14rem;
+        text-align: left;
+        margin-bottom: 0;
+    }
 }
-@media screen and (max-width: 760px) {
+.card {
+    &__group {
+        display: flex;
+        align-items: center;
+    }
+    &__review {
+        font-size: 1.071rem;
+        line-height: 1.8;
+        color: $light-gray;
+        margin-top: 1.1rem;
+    }
+    &__info {
+        background-color: $primary;
+        box-shadow: 5px 5px 20px 0px rgba($primary, 0.15);
+        font-family: "YesevaOne";
+        color: $white;
+        font-size: 1.214rem;
+        display: flex;
+        position: absolute;
+        left: 0;
+        bottom: -1.928rem;
+    }
+    &__area, &__days {
+        padding: 0.8rem 1.3rem;
+        &::before {
+            width: 32px;
+            height: 31px;
+            display: inline-block;
+            margin-right: 1.2rem;
+        }
+    }
+    &__area {
+        text-transform: uppercase;
+        border-right: 1px solid $white;
+        display: flex;
+        align-items: center;
+        &::before {
+            content: url(../../img/area.svg);
+        }
+        & sup {
+            font-size: 0.6rem;
+        }
+    }
+    &__days {
+        display: flex;
+        align-items: center;
+        &::before {
+            content: url(../../img/days.svg);
+        }
+    }
+}
+@media screen and (max-width: 996px) {
     .clients {
         display: none;
     }
