fix: add padding section command

--- a/src/scss/templates/_command.scss
+++ b/src/scss/templates/_command.scss
@@ -71,6 +71,7 @@
 }
 @media screen and (max-width: 992px) {
     .command {
+        padding-bottom: 21.347rem;
         margin-top: 0;
         &__card {
             max-width: 15rem;
