feat: change padding

--- a/src/scss/templates/_command.scss
+++ b/src/scss/templates/_command.scss
@@ -81,7 +81,7 @@
 @media screen and (max-width: 760px) {
     .command {
         background-color: $light-black;
-        padding-top: 3.68rem;
+        padding: 3.68rem 0 6.333rem;
         &__description {
             font-size: 1.071rem;
         }
