--- a/src/scss/templates/_control.scss
+++ b/src/scss/templates/_control.scss
@@ -53,7 +53,7 @@
 .video {
     max-width: 58.357rem;
     min-height: 31rem;
-    background: $dark url("../../img/control.jpg") no-repeat center/cover;
+    background: $dark url("../../img/control.webp") no-repeat center/cover;
     box-shadow: (0px 20px 50px rgba($black, 0.15));
     position: relative;
     display: flex;
