--- a/src/scss/templates/_hero.scss
+++ b/src/scss/templates/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: $dark url(../../img/hero.webp) no-repeat center/cover;
+    background: $dark url("../../img/hero.webp") no-repeat center/cover;
     position: relative;
     height: 100vh;
     display: flex;
@@ -96,7 +96,7 @@
     padding: 2.428rem 6.428rem 2.428rem 3.428rem;
     z-index: 1;
     &::after {
-        content: url(../../img/button-down.svg);
+        content: url("../../img/button-down.svg");
         margin-left: 0.857rem;
     }
     &:hover {
