--- a/src/scss/templates/_slider.scss
+++ b/src/scss/templates/_slider.scss
@@ -56,13 +56,13 @@
         &-prev {
             margin-right: 30px;
             &::after {
-                content: url(../../img/arrow-left.svg);
+                content: url("../../img/arrow-left.svg");
             }
         }
         &-next {
             margin-left: 30px;
             &::after {
-                content: url(../../img/arrow-right.svg);
+                content: url("../../img/arrow-right.svg");
             }
         }
     }
