fixed icon and padding

--- a/src/scss/templates/_types.scss
+++ b/src/scss/templates/_types.scss
@@ -1,5 +1,5 @@
 .repair-types {
-    padding-bottom: 14.785rem;
+    padding: 5.928rem 0 14.785rem;
     &__section-title {
         margin-bottom: 2.214rem;
     }
