feat: add section leave-contacts

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -13,6 +13,9 @@
     align-items: flex-start;
     justify-content: space-between;
 }
+.center {
+    align-items: center;
+}
 .col-30 {
     flex-basis: 32%;
 }
