--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "./templates/control";
 @import "./templates/projects";
 @import "./templates/types";
+@import "./templates/leave-contacts";
 @import "./templates/design";
 @import "./templates/working-methods";
 @import "./templates/command";
